--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,59 @@
+/* For global settings */
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --background-color: #172226;
+  --hover-color: #d0d0d7;
+  --tidbits-color: #476a76;
+  --left-filter-color: #3772ff;
+  --leanleft-filter-color: #51d6ff;
+  --center-filter-color: #c200fb;
+  --leanright-filter-color: #ff7c70;
+  --right-filter-color: #ff331f;
+  --substack-filter-color: #f9a620;
+  --accent-color: #eaf679;
+  --tech-color: #c5fcc6;
+  --text-color: #fbfbff;
+  font-family: "Poppins", sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+/* Font Scaling */
+h1 {
+  font-size: 2.5em;
+  margin: 0px;
 }
-a:hover {
-  color: #535bf2;
+
+h2 {
+  font-size: 1.9882em;
+  margin: 0px;
+}
+
+h3 {
+  font-size: 1.5811em;
+  margin: 0px;
+}
+
+h4 {
+  font-size: 1.2574em;
+  margin: 0px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 1em;
+  margin: 0px;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  background-color: var(--background-color);
+  color: var(--text);
+  margin: 0px;
 }
