--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,29 +1,29 @@
-/* Navbar.css */
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--background-color); /* Example variable */
+  padding: 0 1rem; /* More flexible padding */
+  max-width: 1400px; /* Optional: keep a max width */
+  width: 100%; /* Full width for responsiveness */
+  margin: auto; /* Center the navbar within its container */
+}
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    background-color: var(--background-color); /* Example variable */
-  }
-  
-  .navbar-logo img {
-    height: 50px;
-  }
-  
-  .navbar-links {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .navbar-links a {
-    text-decoration: none;
-    color: var(--text-color);
-  }
-  
-  .navbar-links a:hover {
-    color: var(--hover-color);
-  }
-  
+.navbar-logo img {
+  height: 25px;
+}
+
+.navbar-links {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.navbar-links a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.navbar-links a:hover {
+  color: var(--hover-color);
+}
