--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,21 @@
   --background-color: #172226;
   --hover-color: #d0d0d7;
   --tidbits-color: #476a76;
-  --left-filter-color: #3772ff;
-  --leanleft-filter-color: #51d6ff;
-  --center-filter-color: #c200fb;
-  --leanright-filter-color: #ff7c70;
-  --right-filter-color: #ff331f;
-  --substack-filter-color: #f9a620;
+  --left-bias-color: #3772ff;
+  --leanleft-bias-color: #51d6ff;
+  --center-bias-color: #c200fb;
+  --leanright-bias-color: #ff7c70;
+  --right-bias-color: #ff331f;
+  --substack-bias-color: #f9a620;
   --accent-color: #eaf679;
   --tech-color: #c5fcc6;
   --text-color: #fbfbff;
   font-family: "Poppins", sans-serif;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 /* Font Scaling */
@@ -44,7 +49,6 @@ h4,
 h5,
 h6 {
   text-align: center;
-  text-transform: uppercase;
 }
 
 p {
@@ -52,8 +56,55 @@ p {
   margin: 0px;
 }
 
-body {
-  background-color: var(--background-color);
-  color: var(--text);
-  margin: 0px;
+.user-card {
+  margin-top: 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  height: 60px;
+  min-width: 92%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 5px;
+  border: solid 2px var(--text-color);
+
+}
+
+.profile-picture {
+  border-radius: 5px;
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  object-fit: cover;
+}
+
+.activeUserCard {
+  background-color: var(--tidbits-color);
+}
+
+.userCard:hover {
+  background-color: var(--tidbits-color);
+  cursor: pointer; /* Show that the image is clickable */
+}
+
+.follow-feed-button {
+  background-color: var(--text-color);
+  color: #000000;
+  border-radius: 8px; /* Slightly more rounded for a friendly look */
+  padding: 4px 8px; /* Provides more space for text */
+  cursor: pointer; /* Makes it clear that it’s clickable */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  transition: background-color 0.2s, box-shadow 0.2s; /* Smooth transition for hover */
+  height: 30px;
+}
+
+/* Hover effect to make it pop */
+.follow-feed-button:hover {
+  background-color: var(
+    --text
+  ); /* Swap background and text colors for contrast */
+  color: var(--tidbits);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); /* Enhanced shadow on hover */
 }
