basic website not logged in without polish is done. It's time to add in authentication so that this can really be tuned up. Polishing comes after the remaing logic is added

--- a/src/components/ArticleFilters/ArticleFilters.css
+++ b/src/components/ArticleFilters/ArticleFilters.css
@@ -11,6 +11,11 @@ button {
 #filters-container {
     margin: 0px 10px 10px 10px;
     color: var(--text-color);
+    min-width: 125px;
+}
+
+.filter-section {
+    margin: 10px 5px;
 }
 
 .filter-link {
