--- a/src/components/UserCard/UserCard.css
+++ b/src/components/UserCard/UserCard.css
@@ -1,3 +1,93 @@
+
+
+
+/* Add styles for the content wrapper */
+.user-card-content {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  gap: 10px; /* Space between image and username */
+}
+
+.user-card span {
+  flex: 1; /* This will make the username take up available space */
+}
+
+.system-profile-picture {
+  border-radius: 5px;
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+
 .user-card:hover {
-    cursor: pointer;
+  background-color: var(--tidbits-color);
+  cursor: pointer;
+}
+
+.user-card.active {
+  background-color: var(--tidbits-color);
+}
+
+.follow-feed-button {
+  margin-left: auto; /* Push button to the right */
+  background-color: var(--text-color);
+  color: #000000;
+  border-radius: 8px;
+  padding: 4px 8px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.2s, box-shadow 0.2s;
+  height: 30px;
+  position: relative;
+  z-index: 1;
+}
+
+.follow-feed-button:hover {
+  background-color: var(--text);
+  color: var(--tidbits);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+/* Type-specific modifications */
+
+
+.followed-card {
+  min-width: 92%;
+}
+
+.user-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.user-card img {
+  width: 40px; /* Fixed width */
+  height: 40px; /* Fixed height */
+  border-radius: 5px;
+  object-fit: cover; /* Maintains aspect ratio */
+}
+
+/* or if you're using a specific class for the profile picture */
+.user-thumbnail {
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+/* Remove margin for recommended cards */
+.recommended-card {
+  margin: 0;
+}
+
+/* Keep margin for system and followed cards if needed */
+.system-card,
+.followed-card {
+  margin: 0.5rem 0;
 }
