FIXED BUG where if a user isn't following anyone, it wouldn't display a message

--- a/src/components/ContentFilters/ContentFilters.css
+++ b/src/components/ContentFilters/ContentFilters.css
@@ -109,7 +109,7 @@ button {
     width: 14px;
 }
 
-#media-filter-content::before {
+#media-filter-article::before {
     content: url("/img/media-filter-content-img.svg");
     display: inline-block;
     vertical-align: middle;
