--- a/src/components/ContentDisplayColumn/ContentDisplayColumn.css
+++ b/src/components/ContentDisplayColumn/ContentDisplayColumn.css
@@ -8,6 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 40px;
+  min-width: 100px;
 }
 
 .activePrimaryFilter {
