--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--background-color); /* Example variable */
-  padding: 0 1rem; /* More flexible padding */
+  padding: 0 .5rem; /* More flexible padding */
   max-width: 1500px; /* Optional: keep a max width */
   width: 100%; /* Full width for responsiveness */
   margin: auto; /* Center the navbar within its container */
@@ -39,7 +39,7 @@
 .nav-logo {
   margin-right: auto;
   display: flex;
-  padding-left: 1rem;
+  padding-left: 1.5rem;
 }
 
 .navbar-links {
