--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,7 +1,7 @@
 #profile-body {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0 10px;
 }
 
 .profile-two-column-layout {
