added follow button to profile. Began implementing atomic design with creation of atom - follow feed button.

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -62,6 +62,16 @@
     display: none;
 }
 
+/* Mobile styles */
+@media (max-width: 768px) {
+    #home-column-left {
+        display: block;
+        width: auto;
+        position: relative;
+    }
+}
+
+/* Desktop styles */
 @media (min-width: 768px) {
     #home-columns-container {
         display: grid;
