--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -75,3 +75,24 @@
         margin: 0 auto;
     }
 }
+
+.profile-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.profile-follow-button {
+    margin-right: auto; /* Push button to the right */
+    background-color: var(--text-color);
+    color: #000000;
+    border-radius: 8px;
+    padding: 4px 8px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.2s, box-shadow 0.2s;
+    height: 30px;
+    position: relative;
+    z-index: 1;
+}
